@@ -1,4 +1,0 @@
-from adytum.linguistics.corpora import utils
-c = utils.Corpora('japanese')
-c.loadWordList()
-
