@@ -4,6 +4,8 @@
 * Added a new directory for a combined adytum.ling package.
 * Moved coprora into adytum.ling.
 * Moved wordgen into adytum.ling.
+* Rmeoved old content from README.
+* Removed old, bogus tests.
 
 2006.07.26
 
